# edr_server

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements_3dt.yml  setup.cfg  tox.ini
.github/workflows/: tests.yaml
.run/: Run All Unit Tests.run.xml
docs/: Quickstart_library.md  Quickstart_server.md
edr_server/: admin.py  collection.py  config.py  handlers.py  server.py
edr_server/abstract_data_interface/: admin.py  area.py  capabilities.py  core.py  filter.py  items.py  locations.py  position.py  radius.py  service.py
edr_server/core/: __init__.py  _data_query.py  config.py  exceptions.py  interface.py  models.py  serialisation.py  urls.py
edr_server/impl/: README.md
edr_server/server/: admin.py  collection.py  config.py  handlers.py  paths.py  server.py
edr_server/utils/: paths.py
etc/: config.yml
etc/data/: .gitignore  empty_test_collections.json
templates/: capabilities.json  collection.json  collection_area.json  collection_corridor.json  collection_cube.json  collection_extent_temporal.json  collection_extent_vertical.json  collection_items.json  collection_links_area.json  collection_locations.json  collection_old.json  collection_position.json  collection_radius.json  collection_trajectory.json  collections.json  domain.json  feature.json  feature_collection.json  feature_parameter_param.json  item.covjson  items.json  location.json  location_domain_axis.json  location_parameter_param.json  location_range_param.json  location_range_param_tileset.json  locations.json  locations_feature.json  parameter.json
(+29 files in other folders)
