[metadata]

name = edr_server
version = 0.1.0

[options]
# We're affected by https://bugs.python.org/issue43923, so can only use 3.7 & 3.8
python_requires = >=3.7,<3.9
install_requires =
    shapely
    pyproj
    tornado>=6.1
    python-dateutil
    pyyaml
packages = find:
scripts =
    bin/run_edr_server

[options.extras_require]
dev =
    pytest
    pycountry  # for testing we've got the correct language codes in LanguageMap

